...
  }
  if (platform.isMacOS) {
    final support = p.posix.join(
      userHome,
      'Library',
      'Application Support',
      'Tinest',
    );
    return LocalDaemonDirectories(
      configDirectory: support,
      stateDirectory: support,
      userHomeDirectory: userHome,
      osHomeDirectory: userHome,
...
